:bug: Fixed the 404 page (mobile)
Removed the height as 100vh which caused scrollbars

--- a/src/styles/pages/404.scss
+++ b/src/styles/pages/404.scss
@@ -2,7 +2,7 @@ $lightGray: #fafafa;
 $purple: #7239f2;
 
 .page-centered {
-  height: 100vh;
+  height: 80vh;
   flex: 1;
   display: flex;
   flex-direction: column;
